--- a/css/galeria.css
+++ b/css/galeria.css
@@ -39,14 +39,14 @@
     color: white;
     cursor: pointer;
     font-weight: bold;
-    width: 50px;
-    height: 50px;
-    line-height: 50px;
+    width: 45px;
+    height: 45px;
+    line-height: 40px;
     background: #DE423A;
-    font-size: 2.5em;
+    font-size: 1.6em;
     text-align: center;
     border-radius: 50%;
-    font-family: monospace;
+    /*font-family: monospace;*/
 }
 .modal--open {
     display: block;
